tests/type-reconstruction/ill-typed/functions/functions-2.stella
language core;

extend with 
	#type-reconstruction;

fn f1(n : auto) -> auto {
	return n;
}

fn f2(n : Nat) -> Nat {
	return f1(n);
}

fn main(n : Bool) -> Bool {
	return f1(n);
}